Fixing nav bar colors on collapse

--- a/merged/merged-with-navbar/css/chrome.css
+++ b/merged/merged-with-navbar/css/chrome.css
@@ -69,7 +69,7 @@ a:focus {
     border-bottom: 1px solid rgba(255,255,255,.3);
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    background-color: #000;
+    background-color: #f3f3f3;
 }
 
 .navbar-brand {
@@ -100,7 +100,7 @@ a:focus {
 .navbar-toggle {
     padding: 4px 6px;
     font-size: 16px;
-    color: #fff;
+    color: #000;
 }
 
 .navbar-toggle:focus,
